# fastapi-backend-project

./: .gitignore  configurations.py  main.py  pyproject.toml  requirements.txt
admin/: routes.py
auth/: dependencies.py  hashing.py  routes.py
database/Users/: dbservice.py  models.py
